--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Elatar</title>
         <!--Render All Elemetns Normally-->
-        <link rel="stylesheet" href="../css/normalize.css" />
+        <link rel="stylesheet" href="./css/normalize.css" />
         <!-- Font Awesome-->
-        <link rel="stylesheet" href="../css/all.min.css" />
+        <link rel="stylesheet" href="./css/all.min.css" />
         <!--main template css files-->
-        <link rel="stylesheet" href="../css/template.css" />
+        <link rel="stylesheet" href="./css/template.css" />
         <!--Google Fonts-->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
         <header id="home">
             <div class="container">
                 <a href="#" class="Logo">
-                    <img src="../img/download.jpg" alt="Logo">
+                    <img src="./img/download.jpg" alt="Logo">
                 </a>
                 <nav>
                     <i class="fas fa-bars toggle-menu"></i>
@@ -102,7 +102,7 @@
         <!----------------------------- Start Diesing --------------------------->
         <div class="diesing">
             <div class="image">
-                <img src="../img/mobil-iphon3.jpg" alt="mobil">
+                <img src="./img/mobil-iphon3.jpg" alt="mobil">
             </div>
             <div class="text">
                 <h2>Our Diesing Comes With...</h2>
@@ -134,56 +134,56 @@
             <div class="content">
                 <div class="images all app">
                     <div class="box">
-                        <img src="../img/App.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/App.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/App1.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/App1.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/App2.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/App2.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/App3.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/App3.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/App5.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/App5.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/App6.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/App6.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/App7.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/App7.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/App8.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/App8.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
@@ -192,56 +192,56 @@
                 </div>
                 <div class="images all photo">
                     <div class="box">
-                        <img src="../img/download (1).jpg" width="800px" height="300px" alt="photo">
+                        <img src="./img/download (1).jpg" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/download (2).jpg" width="800px" height="300px" alt="photo">
+                        <img src="./img/download (2).jpg" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/download (3).jpg" width="800px" height="300px" alt="photo">
+                        <img src="./img/download (3).jpg" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/download (4).jpg" width="800px" height="300px" alt="photo">
+                        <img src="./img/download (4).jpg" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/download (5).jpg" width="800px" height="300px" alt="photo">
+                        <img src="./img/download (5).jpg" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/download (6).jpg" width="800px" height="300px" alt="photo">
+                        <img src="./img/download (6).jpg" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/download (7).jpg" width="800px" height="300px" alt="photo">
+                        <img src="./img/download (7).jpg" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/download (8).jpg" width="800px" height="300px" alt="photo">
+                        <img src="./img/download (8).jpg" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
@@ -250,56 +250,56 @@
                 </div>
                 <div class="images all web">
                     <div class="box">
-                        <img src="../img/web1.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/web1.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/web2.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/web2.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/web3.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/web3.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/web4.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/web4.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/web5.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/web5.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/web6.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/web6.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/web7.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/web7.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/web8.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/web8.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
@@ -308,56 +308,56 @@
                 </div>
                 <div class="images all print">
                     <div class="box">
-                        <img src="../img/print1.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/print1.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/print2.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/print2.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/print3.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/print3.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/print4.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/print4.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/print5.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/print5.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/print6.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/print6.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/print7.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/print7.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
                         </div>
                     </div>
                     <div class="box">
-                        <img src="../img/print8.png" width="800px" height="300px" alt="photo">
+                        <img src="./img/print8.png" width="800px" height="300px" alt="photo">
                         <div class="caption">
                             <h4>Awesome Image</h4>
                             <p>Photography</p>
@@ -371,7 +371,7 @@
         <!----------------------------- Start Video ---------------------------->
         <div class="video">
             <video autoplay muted loop width="100%">
-                <source src="../img/WhatsApp Video 2021-05-02 at 3.06.48 AM.mp4" type="video/mp4">
+                <source src="./img/WhatsApp Video 2021-05-02 at 3.06.48 AM.mp4" type="video/mp4">
             </video>
             <div class="text">
                 <h2>Supper Awesome Video Here</h2>
@@ -388,7 +388,7 @@
                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet tincidunts
                     </p>
                 </div>
-                <img src="../img/mobil2.jpg" />
+                <img src="./img/mobil2.jpg" />
             </div>
         </div>
         <!-------------------------- End About --------------------------------->
@@ -426,7 +426,7 @@
                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet tincidunts
                     </p>
                     <div class="content">
-                        <img src="../img/images-child3.jpg" alt="child">
+                        <img src="./img/images-child3.jpg" alt="child">
                         <div class="text">
                             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
                             tincidunts
@@ -434,7 +434,7 @@
                         </div>
                     </div>
                     <div class="content">
-                        <img src="../img/images-child1.jpg" alt="">
+                        <img src="./img/images-child1.jpg" alt="">
                         <div class="text">
                             Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
                             tincidunts
@@ -607,7 +607,7 @@
         <!---------------------------- Start Footer ------------------------------->
         <div class="footer">
             <div class="container">
-                <img src="../img/download.jpg" alt="Logo">
+                <img src="./img/download.jpg" alt="Logo">
                 <p>We Are Social</p>
                 <div class="social-icons">
                     <i class="fab fa-facebook-f"></i>
@@ -620,6 +620,6 @@
             </div>
         </div>
         <!--------------------------- End Footer ----------------------------------->
-        <script src="../js/index.js"></script>
+        <script src="./js/index.js"></script>
     </body>
 </html>
